--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     },
     "dependencies": {
         "chokidar": "^5.0.0",
-        "express": "^5.2.1"
+        "express": "^5.2.1",
+        "ts-morph": "^27.0.2",
+        "zod": "^4.3.6"
     }
 }
