--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
     "module": "src/index.ts",
     "type": "module",
     "private": true,
+    "dependencies": {
+        "@inquirer/prompts": "^8.2.0",
+        "chalk": "^5.6.2",
+        "chokidar": "^5.0.0",
+        "express": "^5.2.1",
+        "log-symbols": "^7.0.1",
+        "ora": "^9.1.0",
+        "ts-morph": "^27.0.2",
+        "zod": "^4.3.6"
+    },
     "devDependencies": {
         "@biomejs/biome": "^2.3.13",
         "@types/bun": "latest",
         "@types/express": "^5.0.6",
+        "@vitest/ui": "4.0.18",
         "husky": "^9.1.7",
         "lint-staged": "^16.2.7",
         "vitest": "^4.0.18"
@@ -25,15 +36,12 @@
         "prepare": "husky",
         "dev": "bun --watch .",
         "typecheck": "tsc --noEmit --watch",
-        "lint": "biome check --apply .",
+        "lint": "biome check --write .",
         "lint:check": "biome check .",
         "format": "biome format --write .",
-        "format:check": "biome format ."
-    },
-    "dependencies": {
-        "chokidar": "^5.0.0",
-        "express": "^5.2.1",
-        "ts-morph": "^27.0.2",
-        "zod": "^4.3.6"
+        "format:check": "biome format .",
+        "build:cli": "bun build src/cli/index.ts --compile --minify",
+        "build:cli:linux": "bun run build:cli --target bun-linux-x64 --outfile dist/cli/svrfx",
+        "build:cli:windows": "bun run build:cli --target bun-windows-x64 --outfile dist/cli/svrfx.exe"
     }
 }
